# tast

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  justfile
.claude/skills/check-progress/: SKILL.md  template.md
.claude/skills/git-summary/: SKILL.md  template.md
.claude/skills/run-tests/: SKILL.md
.claude/skills/validate-fixtures/: SKILL.md  template.md
docs/: implementation-details.md
src/: lib.rs  main.rs
src/cli/: commands.rs
src/emit/: dot.rs  junit.rs  markdown.rs  mermaid.rs  mod.rs  run_result.rs  test_plans.rs  util.rs  yaml.rs
src/graph/: analysis.rs  builder.rs  mod.rs  traversal.rs
src/ir/: fixture.rs  mod.rs  params.rs  resolve.rs  validate.rs
src/parser/: ast.rs  error.rs  extract.rs  lexer.rs  mod.rs  normalize.rs  parse.rs
src/plan/: compiler.rs  filter.rs  mod.rs  types.rs
src/runner/: backend.rs  context.rs  display.rs  executor.rs  mod.rs  registry.rs  report.rs  result.rs
src/runner/backends/: http_pattern.rs  mod.rs
src/runner/backends/http/: mod.rs  request.rs  response.rs
src/runner/backends/rust/: discover.rs  mapping.rs  mod.rs  output.rs  resolve.rs
src/util/: span.rs
tests/: integration.rs  runner_integration.rs  tast_self_validation.rs
tests/fixtures/: cross_graph_order.tast  cycle.tast  empty_graph.tast  full_auth.tast  importable_auth.tast  imports_auth.tast  invalid_syntax.tast  missing_node_ref.tast  simple_edge.tast  single_node.tast  with_fixtures.tast
tests/tast/: full_pipeline.tast  graph_pipeline.tast  parser_pipeline.tast  plan_pipeline.tast  runner_pipeline.tast
(+2 files in other folders)
